Report model updated
