# doc/swaggerComponents.yaml
@@ -343,6 +343,8 @@ components:
           type: string
         fileUrl:
           type: string
+        fileType:
+          type: string
       example:
         workTitle: Keikka 1
         ReportTitle: Report 1
@@ -351,7 +353,7 @@ components:
         businessAsHandler: 60b4ea83628f2f36480f5d24
         agencyAsHandler: 60b4ea97628f2f36480f5d25
         fileUrl: https://keikkakaveri-uploads-bucket.s3.eu-central-1.amazonaws.com/images/a08cff83-e058-4ced-a725-602db4b51a6d-water-3226_1920.jpg
-
+        fileType: image
     Feeling:
       type: object
       required:
