# models/Report.ts
@@ -3,10 +3,6 @@ import uniqueValidator from "mongoose-unique-validator"
 import { IReportDocument } from "../objecttypes/modelTypes"
 
 const reportSchema = new Schema({
-    workerId: {
-        type: mongoose.Schema.Types.ObjectId,
-        ref: "Worker"
-    },
     workTitle: {
         type: String,
         required: true
@@ -23,6 +19,22 @@ const reportSchema = new Schema({
         type: String,
         required: true
     },
+    workerId: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: "Worker"
+    },
+    workerName: {
+        type: String,
+        required: false
+    },
+    workerEmail: {
+        type: String,
+        required: false
+    },
+    workerPhone: {
+        type: String,
+        required: false
+    },
     businessAsHandler: {
         type: String,
         required: false
@@ -32,6 +44,10 @@ const reportSchema = new Schema({
         required: false
     },
     fileUrl: {
+        type: String,
+        required: false
+    },
+    fileType: {
         type: String,
         required: false
     }
